Wed Nov 10 14:49:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SOCK_Dgram_Mcast.h:
          Doxygen changes

        * configure.ac:
        * m4/ace.m4:
        * m4/tao.m4:
          Removed support for TAO, thanks to Mark <markg85 at gmail dot com>
          for reporting this

Wed Nov 10 10:17:27 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Added support for tao_idl3_to_xmi in makefiles.

Sun Nov  7 00:13:13 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/INET_Addr_Test.cpp: Mismatching the addr->name test is not
          necessarily an error.

Fri Nov  5 14:23:26 UTC 2010  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.local.GNU: Added a hook for users to
          include site-private rules in a build. If the user places a
          "rules.private.GNU" in any build directory it will get included
          from rules.local.GNU. The "private_rules_file" make variable
          can be set to override the name and/or location of the file.
          If no such rules file exists, its absence is silently ignored.
          This facility can be used, for example, to integrate a specialized
          code checker into the build process.

        * NEWS: Describe this new hook.

Fri Nov  5 00:29:08  2010  Steve Huston  <shuston@riverace.com>

        * ace/Process_Manager.h: Removed remaining references to reap().
          Noted that terminate() doesn't remove the process entry, and the
          caller is advised to also call wait() or remove().

Thu Nov  4 15:17:51 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): For platforms that have the GNU-extended
          gethostbyname2_r() function, use it instead of getaddrinfo() for
          a IPv6 hostname lookup. Customer reports that it getaddrinfo() is
          hugely slower than gethostbyname2 on large vlans. The alternate