@@ -2340,6 +2340,7 @@ Elez <elezsh at gmail dot com>
 Ranjit Hande <hande at avaya dot com>
 Van Vuong <vanvuong1 at us dot ibm dot com>
 Mark <markg85 at gmail dot com>
+Helmut Böing
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
